fix: overflow issue

--- a/Components/BlockImageTwoCol/_style.scss
+++ b/Components/BlockImageTwoCol/_style.scss
@@ -1,4 +1,5 @@
 [is='flynt-block-image-two-col'] {
+  overflow: hidden;
   padding: 0 !important;
 
   .columns {
