--- a/Components/SliderPosts/_style.scss
+++ b/Components/SliderPosts/_style.scss
@@ -1,4 +1,6 @@
 [is='flynt-slider-posts'] {
+  overflow: hidden;
+  
   .content {
     @include row;
 
